--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
-node_modules
-dist
+node_modules/
+
+dist/
+
+.vscode/
+
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
